[package]
name = "hibppwdflt"
version = "0.1.0"
authors = ["Romain Labolle <romain@labolle.eu>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2021"

[package.metadata.winres]
FileDescription = "Password Filter Module to exclude leaked passwords"
ProductName = "HIBP Password Filter"
ProductVersion = "0.1.1"
OriginalFilename = "hibppwdflt.dll"
LegalCopyright = "Copyright © 2022"

[build-dependencies]
winres = "0.1"

[dependencies]
md4 = "0.10"

futures = "0.3"
reqwest = "0.11"
backoff = { version = "0.4", features = ["tokio"] }
tokio = { version = "1.29", features = ["full"] }
hex = "0.4"
indicatif = "0.17"
chrono = "0.4"
clap = { version = "4.3.19", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true


