[package]
name = "hibppwdflt"
version = "0.1.3"
authors = ["Romain Labolle <romain@labolle.eu>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2021"

[package.metadata.winres]
FileDescription = "Password Filter Module to exclude leaked passwords"
ProductName = "HIBP Password Filter"
ProductVersion = "0.1.3"
OriginalFilename = "hibppwdflt.dll"
LegalCopyright = "Copyright © 2023"

[build-dependencies]
winres = "0.1"

[dependencies]
md4 = "0.10"

futures = "0.3"
reqwest = "0.11"
backoff = { version = "0.4", features = ["tokio"] }
tokio = { version = "1.35", features = ["full"] }
hex = "0.4"
indicatif = "0.17"
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
clap = { version = "4.4.18", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
